--- a/practica_III/package.json
+++ b/practica_III/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/app.ts"
+    "start": "ts-node ./src/app.ts",
+    "dev": "nodemon ./src/app.ts",
+    "dev-inspect": "nodemon --watch src/**/* -e ts,json --exec node --inspect-brk -r ts-node/register src/app.ts"
   },
   "keywords": [],
   "author": "",
